tests/ui/errors/snapshots/parse_impl_block_non_fn_token.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:5:3]
 4 │ impl Num {
 5 │   x
   ·   ┬
   ·   ╰── expected `fn` in impl block
 6 │ }
   ╰────
  help: Only functions are allowed in `impl` blocks · code: [parse.syntax_error]
