tests/ui/errors/snapshots/parse_inclusive_range_without_end.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:25]
 1 │ fn test() { let r = 1..=; }
   ·                         ┬
   ·                         ╰── expected end value
   ╰────
  help: Inclusive ranges require an end value · code: [parse.syntax_error]
