tests/ui/errors/snapshots/parse_lambda_return_type_requires_block.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:27]
 2 │ fn test() {
 3 │   let f = |x: int| -> int x * 2;
   ·                           ┬
   ·                           ╰── not allowed
 4 │ }
   ╰────
  help: A lambda with a return type requires a block body · code: [parse.syntax_error]
