tests/ui/errors/snapshots/parse_misplaced_import_in_function.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ fn main() {
 3 │   import "go:strings"
   ·   ───┬──
   ·      ╰── misplaced
 4 │ }
   ╰────
  help: Move this import to the top level of the file · code: [parse.syntax_error]
