tests/ui/errors/snapshots/parse_postfix_increment_in_if_header.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:9]
 3 │   let mut foo = 0
 4 │   if foo++ {
   ·         ─┬
   ·          ╰── Lisette has no `++` operator
 5 │     log()
   ╰────
  help: Use `foo += 1` instead · code: [parse.syntax_error]
