tests/ui/errors/snapshots/parse_postfix_increment_index.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:7]
 3 │   let mut a = [1, 2, 3]
 4 │   a[0]++
   ·       ─┬
   ·        ╰── Lisette has no `++` operator
 5 │ }
   ╰────
  help: Use `a[0] += 1` instead · code: [parse.syntax_error]
